test/classes/bradc/setterForField.good
myC is: {x = 2}
myC is: {x = 3}
setterForField.chpl:6: error: halt reached - Can only assign C.x non-negative integers!
